[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyagent"
version = "0.1.0"
description = "Lightweight LLM workflow framework for edge models"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
